SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

#578 Data Import Plugin: Import file no longer offers "one to one mapping"
  The "one to one mapping"-function maps the first column in CSV file or Excel sheet to the first column of the import table, the second to the second ...

Introduced Java 12 compatibility.

Hibernate Plugin: Usual file functions (open, save, ...) are now available for the HQL editor.

The Hibernate Plugin was reanimated. It requires Hibernates versions greater or equal to 5.2 and supports JPA only.

Tooltips for result tab menu items "Toggle sticky" and "Toggle anchored"

#577 Caret color of SQL editor can be adjusted, see menu File -> New Session Properties -> tab Syntax.
  This feature is helpful if SQuirreL is run in "fashionable" black. To run SQuirreL in black:
  - Choose the Metal-Charcoal Look and Feel
  - In the Syntax properties choose the white spaces to be black
  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

#1384 Look and feel Plugin: Tiny L&F causes NullPointerException in version 3.9.1 at application start.

Installer dialog: On first page of installer wizard the Data Import plugin was not mentioned to be a standard Plugin.

SQL Result: When row number where displayed, the functions "Mark duplicates values" and "Find column" raised exceptions.

#1383 Create data script from SQL fails with column alias
  The problem occurred for SQLs like